site ledger, fix end of year bug, improve instructions